2000-05-03  Tanaka Akira  <akr@zsh.org>

	* 11137: Test/07cond.ztst: detect block device file using find.

2000-05-03  Bart Schaefer  <schaefer@zsh.org>

	* 11136: Doc/Zsh/expn.yo: Reorganize history expansion doc.

2000-05-03  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11126: Doc/Zsh/expn.yo: typos in 11117.

2000-05-03  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11121: Completion/User/_fakeroot, Completion/User/_rlogin,
 	Completion/User/_ssh, Completion/User/_sudo,
 	Completion/User/_xargs, Completion/X/_xutils, Doc/Zsh/compsys.yo,
 	Src/Zle/computil.c: allow `-' in exclusion lists for _arguments,
 	to avoid completing all options
	
	* 11117: Doc/Zsh/expn.yo, Src/hist.c: fix for the (z) flag: report
 	partial word (like `"foo', without a closing quote); mention in
 	manual that (z) is handled lately
	
	* Andrej: 11067: Completion/Builtins/_zcompile: handle -t option

	* 11113: Doc/Zsh/expn.yo, Src/hist.c, Src/subst.c,
 	Src/Modules/parameter.c, Src/Zle/zle_misc.c: new (z) parameter
 	flag to do shell-word splitting on the value
	
	* 11110: Completion/Core/_expand, Src/Zle/complist.c: remove
 	backslashes before `$' in _expand when `substitute' is unset; fix
 	for clearing end-of-list lines in menu-selection
	
2000-05-03  Tanaka Akira  <akr@zsh.org>

	* 11109: Completion/X/_xauth: new completion for xauth.

	* 11106: Completion/User/_mount: fix glob for device files.

2000-05-03  Peter Stephenson  <pws@cambridgesiliconradio.com>

	* 11096: Test/ztst.zsh, Test/13parameter.ztst: fix test output
	for C locale and ensure C locale is used

2000-05-03  Sven Wischnowsky  <wischnow@informatik.hu-berlin.de>

	* 11094: Doc/Zsh/compsys.yo: more doc fixes
	
	* 11092: Completion/Base/_arguments, Src/Zle/compcore.c: make sure
 	that completion messages are displayed even when there are no
 	matches
	
	* 11091: Functions/Zftp/zfcd_match: fix for completion of
 	directories for zftp suite
	